@@ -1,5 +1,6 @@
 0.03
  - Fix parsing and test for it.
+ - Update Module::Install to 1.21 version.
 
 0.02 2023-01-23T18:37:50+01:00
  - Add SEE ALSO section to doc.
